Fix Operator Menu Overflow (#2653)

--- a/core/gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.scss
+++ b/core/gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.scss
@@ -4,11 +4,8 @@
 
 .operator-label {
   white-space: nowrap;
-  width: 100%;
   height: 32px;
-  line-height: 32px;
-  display: flex;
-  align-content: center;
+  line-height: 30px;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0);
   transition:
